--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cortana-x",
   "productName": "cortana-x",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Menubar app powered by the new Bing AI Search",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -24,6 +24,8 @@
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
     "@electron-forge/plugin-webpack": "^6.0.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -39,6 +41,9 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10"
   }
 }
