--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "css-loader": "^6.0.0",
+    "dotenv": "^16.0.3",
     "electron": "23.1.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
@@ -41,6 +42,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "bing-chat": "^0.2.1",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
