--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@dank-style/react": "^0.2.24",
     "bing-chat": "^0.2.1",
     "electron-squirrel-startup": "^1.0.0",
+    "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10"
