--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
-    "@dank-style/react": "^0.2.24",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "bing-chat": "^0.2.1",
     "electron-squirrel-startup": "^1.0.0",
     "framer-motion": "^10.0.1",
