--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ tauri = { version = "1.2", features = ["api-all", "icon-png", "macos-private-api
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15.0"
+utf8_slice = "1.0.0"
+tokio = { version = "1.26.0", features = ["full"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
