--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "license": "MIT",
   "devDependencies": {
     "@emotion/react": "^11.10.6",
+    "@tauri-apps/cli": "^1.2.2",
+    "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "dotenv": "^16.0.3",
-    "@tauri-apps/cli": "^1.2.2",
     "@vitejs/plugin-react": "^3.0.0",
+    "dotenv": "^16.0.3",
     "typescript": "~4.5.4",
     "vite": "^4.0.0"
   },
