--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["you"]
 license = ""
 repository = ""
 edition = "2021"
-rust-version = "1.57"
+rust-version = "1.65"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -20,6 +20,7 @@ serde_json = "1.0"
 dotenv = "0.15.0"
 utf8_slice = "1.0.0"
 tokio = { version = "1.26.0", features = ["full"] }
+binggpt = "0.1.5"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
