--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "modern-clippy"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+version = "0.1.0"
+description = "Not the Clippy we need, but the Clippy we deserve."
+authors = ["Siddharth Jha"]
+license = "MIT"
+repository = "https://www.github.com/clearlysid/modern-clippy"
 edition = "2021"
 rust-version = "1.65"
 
